# modelrelay

./: .env.example  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cloud  Dockerfile.proxy  Dockerfile.web  Dockerfile.worker  LICENSE  README.md  SECURITY.md  architecture.html  behavior-contract.html  book.toml  codecov.yml  deny.toml  docker-compose.yml  index.html  print.html  protocol-walkthrough.html  runbook.html  rust-toolchain.toml  searchindex.js  searchindex.json  tls.html
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy-web.yml  docker.yml  docs.yml  publish.yml  release.yml
crates/modelrelay-cloud/: Cargo.toml
crates/modelrelay-cloud/migrations/: 20260405000000_add_admin_and_api_keys.sql
crates/modelrelay-cloud/src/: db.rs  lib.rs  main.rs  state.rs
crates/modelrelay-cloud/src/routes/: auth.rs  checkout.rs  csrf.rs  dashboard.rs  mod.rs  pricing.rs  webhook.rs
crates/modelrelay-cloud/templates/: checkout_cancel.html  checkout_success.html  index.html  pricing.html
crates/modelrelay-cloud/tests/: http_routes.rs
crates/modelrelay-contract-tests/: Cargo.toml
crates/modelrelay-contract-tests/src/: admin_api_harness.rs  lib.rs  response_harness.rs
crates/modelrelay-contract-tests/tests/: admin_api_live.rs
crates/modelrelay-protocol/: Cargo.toml  README.md
crates/modelrelay-protocol/src/: admin_api.rs  lib.rs
crates/modelrelay-server/: Cargo.toml  README.md
crates/modelrelay-server/migrations/: 20260405120000_create_server_api_keys.sql
crates/modelrelay-server/src/: api_keys.rs  http.rs  lib.rs  main.rs  worker_socket.rs
crates/modelrelay-server/tests/: http_api_keys.rs  http_chat_completions.rs  http_health.rs  http_messages.rs  http_models.rs  http_responses.rs  http_worker_daemon.rs  worker_socket.rs
crates/modelrelay-server/tests/support/: mod.rs
crates/modelrelay-web/: Cargo.toml
crates/modelrelay-web/migrations/: 20260404000000_create_users_and_subscriptions.sql  20260404200000_add_user_api_key.sql
crates/modelrelay-web/src/: db.rs  lib.rs  main.rs  state.rs  templates.rs
crates/modelrelay-web/src/routes/: auth.rs  checkout.rs  dashboard.rs  mod.rs  pricing.rs  templates.rs  webhook.rs
crates/modelrelay-web/templates/: checkout_cancel.html  checkout_success.html  dashboard.html  index.html  pricing.html
crates/modelrelay-worker/: Cargo.toml  README.md
crates/modelrelay-worker/src/: lib.rs  main.rs
crates/modelrelay-worker/tests/: live_backend.rs
crates/proxy-contract-tests/: Cargo.toml
crates/proxy-contract-tests/src/: dispatch_harness.rs  heartbeat_harness.rs  lib.rs  registration_harness.rs  response_harness.rs
crates/proxy-server/: Cargo.toml
crates/proxy-server/src/: http.rs  http_router.rs  lib.rs  main.rs  worker_socket.rs
crates/proxy-server/tests/: http_chat_completions.rs  http_messages.rs  http_models.rs  http_responses.rs  http_router.rs  http_worker_daemon.rs  worker_socket.rs
crates/proxy-server/tests/support/: mod.rs
crates/worker-daemon/: Cargo.toml
crates/worker-daemon/src/: lib.rs  main.rs
crates/worker-daemon/tests/: live_backend.rs
crates/worker-protocol/: Cargo.toml  README.md
deploy/modelrelay-io/: cloud-deployment.yaml  cloud-ingress.yaml  cloud-service.yaml  namespace.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  reprovision-keys-job.yaml  secrets.yaml.example  server-deployment.yaml  server-ingress.yaml  server-service.yaml  web-deployment.yaml  web-ingress.yaml  web-service.yaml
docs/: README.md  SUMMARY.md  architecture.md  behavior-contract.md  protocol-walkthrough.md  runbook.md  tls.md
examples/: llama-server.sh  multi-worker.sh  tls-nginx.conf
extras/: install-windows-service-worker.ps1  install-windows-service.ps1  load-test.sh  modelrelay-llamafile  modelrelay-server.service  modelrelay-worker@.service  proxy-server.service  proxy.env.example  worker-daemon@.service  worker.env.example
scripts/: README.md  loadtest.py
