[workspace]
members = [
    "crates/proxy-contract-tests",
    "crates/proxy-server",
    "crates/worker-protocol",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/ericflo/llm-worker-proxy"
rust-version = "1.94"

[workspace.dependencies]
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
http = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subtle = "2.6"
tokio = { version = "1.46", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.28"
worker-protocol = { path = "crates/worker-protocol" }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
