[workspace]
members = [
    "crates/modelrelay-contract-tests",
    "crates/modelrelay-server",
    "crates/modelrelay-worker",
    "crates/modelrelay-protocol",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
homepage = "https://modelrelay.io"
repository = "https://github.com/ericflo/modelrelay"
rust-version = "1.94"

[workspace.dependencies]
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
http = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subtle = "2.6"
tokio = { version = "1.51", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
modelrelay-protocol = { path = "crates/modelrelay-protocol" }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
