[package]
name = "modelrelay-cloud"
version = "0.2.7"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
modelrelay-protocol = { workspace = true, features = ["admin-api"] }
modelrelay-web = { path = "../modelrelay-web" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
sqlx = { workspace = true }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
argon2 = "0.5"

[[bin]]
name = "reprovision-server-keys"
path = "src/bin/reprovision_server_keys.rs"

[dev-dependencies]
http-body-util = "0.1"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
