[package]
name = "modelrelay-contract-tests"
version = "0.2.4"
edition = "2024"
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
modelrelay-protocol = { path = "../modelrelay-protocol", features = ["admin-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
axum.workspace = true
modelrelay-server = { path = "../modelrelay-server", default-features = false }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
