[package]
name = "modelrelay-protocol"
version = "0.2.5"
description = "WebSocket protocol types shared between the proxy server and worker daemon"
keywords = ["llm", "protocol", "websocket", "proxy", "worker"]
categories = ["network-programming", "encoding"]
homepage.workspace = true
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
admin-api = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
