[package]
name = "modelrelay-server"
version = "0.1.5"
description = "Central HTTP proxy server that routes LLM inference requests to remote workers over WebSocket"
keywords = ["llm", "proxy", "websocket", "inference", "openai"]
categories = ["network-programming", "web-programming::http-server"]
homepage.workspace = true
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
tokio = { workspace = true, features = ["signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
modelrelay-protocol.workspace = true

[dev-dependencies]
futures-util.workspace = true
http.workspace = true
tokio-tungstenite.workspace = true
modelrelay-worker = { path = "../modelrelay-worker" }

[lints]
workspace = true
