[package]
name = "modelrelay-worker"
version = "0.2.0"
description = "Worker daemon that connects to the proxy server and forwards requests to a local LLM backend"
keywords = ["llm", "worker", "websocket", "inference", "llama"]
categories = ["network-programming", "web-programming::http-client"]
homepage.workspace = true
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
futures-util.workspace = true
serde = { workspace = true }
toml.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["signal"] }
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
modelrelay-protocol.workspace = true

[dev-dependencies]
axum.workspace = true
modelrelay-server = { path = "../modelrelay-server" }
serde_json.workspace = true

[lints]
workspace = true
