[package]
name = "proxy-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
tokio.workspace = true
worker-protocol.workspace = true

[dev-dependencies]
futures-util.workspace = true
http.workspace = true
tokio-tungstenite.workspace = true

[lints]
workspace = true
