[package]
name = "proxy-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
clap = { version = "4", features = ["derive", "env"] }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
tokio = { workspace = true, features = ["signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
worker-protocol.workspace = true

[dev-dependencies]
futures-util.workspace = true
http.workspace = true
tokio-tungstenite.workspace = true
worker-daemon = { path = "../worker-daemon" }

[lints]
workspace = true
