[package]
name = "worker-daemon"
version = "0.1.0"
description = "Worker daemon that connects to the proxy server and forwards requests to a local LLM backend"
keywords = ["llm", "worker", "websocket", "inference", "llama"]
categories = ["network-programming", "web-programming::http-client"]
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
futures-util.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["signal"] }
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
worker-protocol.workspace = true

[dev-dependencies]
axum.workspace = true
proxy-server = { path = "../proxy-server" }
serde_json.workspace = true

[lints]
workspace = true
