[package]
name = "worker-protocol"
version = "0.1.0"
description = "WebSocket protocol types shared between the proxy server and worker daemon"
keywords = ["llm", "protocol", "websocket", "proxy", "worker"]
categories = ["network-programming", "encoding"]
homepage = "https://github.com/ericflo/llm-worker-proxy"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
